Add HealthKit and Photo Services with History View Integration
- Introduced HealthKitManager for managing health data, including body mass and body fat tracking.
- Added PhotoService for handling image selection, saving, and caching within the app.
- Created HistoryView to display past workouts and stats, integrated into the main tab view.
- Updated Info.plist for improved photo library access description.
- Added unit tests for HealthKitManager and PhotoService to ensure functionality and reliability.

--- a/UzoFitness/Info.plist
+++ b/UzoFitness/Info.plist
@@ -5,6 +5,6 @@
 	<key>NSHealthShareUsageDescription</key>
 	<string>We use HealthKit to read your body weight and body fat percentage so you can track your fitness progress.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We access your photo library so you can upload progress photos and compare changes over time.</string>
+	<string>We access your photo library to save photos for angles and so you can upload progress photos and compare changes over time.</string>
 </dict>
 </plist>
