Add LibraryViewModel and Update .gitignore
- Introduced LibraryViewModel to manage workout templates, exercises, and active plans, implementing data loading and intent handling.
- Added unit tests for LibraryViewModel to ensure functionality and reliability.
- Updated .gitignore to include additional Xcode build artifacts and user-specific settings, improving project cleanliness.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-UzoFitness.xcodeproj/project.pbxproj
-UzoFitness.xcodeproj/xcuserdata/kosiuzodinma.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+# Xcode build artifacts
+build/
+*.build/
+DerivedData/
+
+# User-specific settings
+xcuserdata/
+*.xcuserdatad/
+**/xcdebugger/**/*.xcbkptlist
+
+# Workspace
+*.xcworkspace
+
+# Swift Package Manager
+.build/
+
+# CocoaPods
+Pods/
+
+# Carthage
+Carthage/
+Carthage/Build/
+
+# Keep project file and shared data under version control
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
