Enhance Persistence and Progress Management with Detailed Logging and UI Updates
- Added comprehensive logging in PersistenceController for model container creation and error handling, improving debugging capabilities.
- Updated ProgressViewModel to include detailed logging during photo loading, including checks for loading state and metrics loading.
- Renamed ProgressView to ProgressPhotosView for clarity and updated references in MainTabView.
- Enhanced SettingsView with a structured layout, including permissions and data sync sections, and integrated user feedback mechanisms for actions like backup and restore.
- Implemented error handling and user alerts in SettingsView for improved user experience during data operations.

--- a/UzoFitness/Resources/Info.plist
+++ b/UzoFitness/Resources/Info.plist
@@ -6,5 +6,7 @@
 	<string>We use HealthKit to read your body weight and body fat percentage so you can track your fitness progress.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We access your photo library to save photos for angles and so you can upload progress photos and compare changes over time.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We save progress photos to your photo library so you can track your fitness transformation over time.</string>
 </dict>
 </plist>
